src/objects/Account_Network_Member__c.object
<CustomObject>
    <description>Members of a Network excluding the Hub Account (i.e. the Account Owning the Network)</description>
    <fields>
        <fullName>Account_Network_Member__c</fullName>
        <label>Account Network Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Member of Networks</relationshipLabel>
        <relationshipName>Account_Network_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CFE_D__c</fullName>
        <formula>Account_Network_Member__r.CFEs_Implants_CY_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#CFE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Network Members</relationshipLabel>
        <relationshipName>Account_Network_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dental_Sales_CY__c</fullName>
        <formula>Account_Network_Member__r.TS_CY_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dental Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Sales_LY__c</fullName>
        <formula>Account_Network_Member__r.TS_CY_1_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dental Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Sales_YTD__c</fullName>
        <formula>Account_Network_Member__r.TS_CY_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dental Sales YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_D__c</fullName>
        <formula>TEXT(Account_Network_Member__r.Loyalty_Implants_Basic__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loyalty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Competitor_D__c</fullName>
        <formula>Account_Network_Member__r.Main_Competitor_D_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Priority_of_Account__c</fullName>
        <label>Network Priority of Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Primary</fullName>
                </value>
                <value>
                    <fullName>2 - Secondary</fullName>
                </value>
                <value>
                    <fullName>3 - Tertiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <referenceTo>Network__c</referenceTo>
        <relationshipLabel>Account Network Members</relationshipLabel>
        <relationshipName>Account_Network_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resonse_ATN__c</fullName>
        <description>This field is used for Networks where Network members can be used to track invitations (similar to campaign). This functionality will be removed when campaigns will be globally rolled-out. Currently for ATN only.</description>
        <inlineHelpText>This field is used for Networks where Network members can be used to track invitations (similar to campaign). This functionality will be removed when campaigns will be globally rolled-out. Currently for ATN only.</inlineHelpText>
        <label>Resonse (ATN)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No response/Not applicable</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resonse_ATS__c</fullName>
        <description>This field is used for Networks where Network members can be used to track invitations (similar to campaign). This functionality will be removed when campaigns will be globally rolled-out. Currently for ATS only.</description>
        <inlineHelpText>This field is used for Networks where Network members can be used to track invitations (similar to campaign). This functionality will be removed when campaigns will be globally rolled-out. Currently for ATS only.</inlineHelpText>
        <label>Resonse (ATS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No response/Not applicable</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abutments_CY__c</fullName>
        <formula>Account_Network_Member__r.TQ_CY_D_DD_Abuts_Atlantis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut&apos;s CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abutments_YTD__c</fullName>
        <description>Account_Network_Member__r.TQ_CY_D_DD_CustAbuts_Atlantis__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut&apos;s YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abuts_LY__c</fullName>
        <formula>Account_Network_Member__r.TQ_CY_1_D_DD_Abuts_Atlantis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut&apos;s LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_CY__c</fullName>
        <formula>Account_Network_Member__r.TQ_CY_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY__c</fullName>
        <formula>Account_Network_Member__r.TQ_CY_1_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_YTD__c</fullName>
        <formula>Account_Network_Member__r.TQ_CY_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_CY__c</fullName>
        <formula>Account_Network_Member__r.TQ_CY_D_DI_StockAbuts_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Stock Abut&apos;s CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_LY__c</fullName>
        <formula>Account_Network_Member__r.TQ_CY_1_D_DI_StockAbuts_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Stock Abut&apos;s LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_YTD__c</fullName>
        <formula>Account_Network_Member__r.TQ_CY_D_DI_StockAbuts_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Stock Abut&apos;s YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_D__c</fullName>
        <formula>TEXT(Account_Network_Member__r.Volume_Implants__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_Atlantis_Potential__c</fullName>
        <formula>Account_Network_Member__r.ATL_Abut_Potential_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Atlantis Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Network Member</label>
    <nameField>
        <displayFormat>NETM-{000000}</displayFormat>
        <label>Account Network Member #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Network Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>